// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoalCircle Component Renders an GoalCircle  with goal tiltle, active as false and completion perc 40 1`] = `
<View
  style={
    {
      "marginHorizontal": 5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "marginBottom": 10,
        "width": 80,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "144deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#D6512D",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#e0e0e0",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 33,
          "height": 65,
          "justifyContent": "center",
          "width": 65,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        40
        %
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="btnGoalTitleClick"
  >
    <Text
      style={
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 30,
          "color": "#006DE5",
          "height": 30,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 100,
        }
      }
      testID="txtGoalTitle"
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`GoalCircle Component Renders an GoalCircle  with goal tiltle, active as true and completion perc 100 1`] = `
<View
  style={
    {
      "marginHorizontal": 5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "marginBottom": 10,
        "width": 80,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#33691E",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "360deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#33691E",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 33,
          "height": 65,
          "justifyContent": "center",
          "width": 65,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        100
        %
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="btnGoalTitleClick"
  >
    <Text
      style={
        {
          "backgroundColor": "#006DE5",
          "borderRadius": 30,
          "color": "#ffffffff",
          "height": 30,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 100,
        }
      }
      testID="txtGoalTitle"
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`GoalCircle Component Renders an GoalCircle with goal tiltle, active as false and completion perc 100 1`] = `
<View
  style={
    {
      "marginHorizontal": 5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#e0e0e0",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "marginBottom": 10,
        "width": 80,
      }
    }
  >
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#33691E",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "height": 80,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": 80,
          },
          {
            "transform": [
              {
                "rotate": "360deg",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#33691E",
            },
            {
              "borderBottomLeftRadius": 40,
              "borderTopLeftRadius": 40,
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 40,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderRadius": 33,
          "height": 65,
          "justifyContent": "center",
          "width": 65,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 20,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        100
        %
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="btnGoalTitleClick"
  >
    <Text
      style={
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 30,
          "color": "#006DE5",
          "height": 30,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 100,
        }
      }
      testID="txtGoalTitle"
    >
      Test
    </Text>
  </View>
</View>
`;
